// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DepartmentPage when claimantShowOrganizationUnits feature flag is disabled renders the page 1`] = `
<div>
  <form
    class="usa-form"
    method="post"
  >
    <h1
      class="js-title margin-top-0 margin-bottom-2 font-heading-sm line-height-sans-3"
      tabindex="-1"
    >
      Employment information
    </h1>
    <button
      class="usa-button position-relative margin-top-4"
      type="submit"
    >
      Save and continue
    </button>
  </form>
</div>
`;

exports[`DepartmentPage when claimantShowOrganizationUnits feature flag is enabled when there is only one linked department renders the page 1`] = `
<div>
  <form
    class="usa-form"
    method="post"
  >
    <h1
      class="js-title margin-top-0 margin-bottom-2 font-heading-sm line-height-sans-3"
      tabindex="-1"
    >
      Employment information
    </h1>
    <fieldset
      class="usa-fieldset margin-top-3 usa-form-group"
    >
      <legend
        class="usa-label text-bold usa-legend font-heading-lg line-height-sans-3 margin-bottom-1 maxw-tablet"
      >
        Confirm your department
      </legend>
      <span
        class="display-block line-height-sans-5 measure-5 usa-intro"
      >
        Based on what you’ve entered, our records show you work at 
        <strong>
          Department One
        </strong>
        . Is this the department where you are applying to take leave?
      </span>
      <div
        class="margin-top-3"
      >
        <div
          class="usa-radio measure-5 bg-transparent"
        >
          <input
            class="usa-radio__input"
            id="InputChoice5"
            name="radio_organization_unit"
            type="radio"
            value="department_one"
          />
          <label
            class="usa-radio__label"
            for="InputChoice5"
          >
            Yes
          </label>
        </div>
        <div
          class="usa-radio measure-5 bg-transparent"
        >
          <input
            class="usa-radio__input"
            id="InputChoice6"
            name="radio_organization_unit"
            type="radio"
            value="choiceNo"
          />
          <label
            class="usa-radio__label"
            for="InputChoice6"
          >
            No
          </label>
        </div>
      </div>
    </fieldset>
    <button
      class="usa-button position-relative margin-top-4"
      type="submit"
    >
      Save and continue
    </button>
  </form>
</div>
`;
